# SIP-wav

./: .env.example  .gitignore  README.md  SIPWAV_MODES.md  pipeline.py  pyproject.toml  requirements.txt  setup.py  sipwav-env-check.sh  正常的.txt
sipwav/: __init__.py  aligner.py  asr_aliyun.py  asr_handler.py  cli.py  env.py  features.py  numbers.py  pipeline.py  report.py  scanner.py  task.py
